--- a/IESA_ROOT/users/templates/users/profile_edit.html
+++ b/IESA_ROOT/users/templates/users/profile_edit.html
@@ -9,7 +9,9 @@
         <div class="col-lg-6">
             <div class="card card-modern">
                 <div class="card-body p-4">
-                    <h2 class="mb-4 fw-bold text-primary">Edit profile</h2>
+                    <div class="text-center mb-4">
+                        <h6 class="section-title mb-4" style="display: block;">EDIT PROFILE</h6>
+                    </div>
                     
                     <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
@@ -48,7 +50,7 @@
                         </div>
 
                         <hr>
-                        <h5 class="mb-3">Social & links</h5>
+                        <h6 class="section-title mb-3" style="display: block;">SOCIAL & LINKS</h6>
                         <div class="mb-3">
                             <label for="id_github_url" class="form-label">GitHub</label>
                             {{ form.github_url }}
