--- a/IESA_ROOT/users/templates/users/profile_public.html
+++ b/IESA_ROOT/users/templates/users/profile_public.html
@@ -33,10 +33,10 @@
         
         <!-- User Statistics -->
         <div class="mt-3">
-          <h6>Activity Statistics</h6>
+          <h6 class="section-title mb-3" style="display: block;">ACTIVITY STATISTICS</h6>
           <div class="row text-center">
             <div class="col-4">
-              <div class="card bg-light border-0">
+              <div class="card card-modern bg-light border-0">
                 <div class="card-body py-2">
                   <h5 class="mb-0 text-primary">{{ user_obj.total_posts }}</h5>
                   <small class="text-muted">Posts</small>
@@ -44,7 +44,7 @@
               </div>
             </div>
             <div class="col-4">
-              <div class="card bg-light border-0">
+              <div class="card card-modern bg-light border-0">
                 <div class="card-body py-2">
                   <h5 class="mb-0 text-danger">{{ user_obj.total_likes_received }}</h5>
                   <small class="text-muted">Likes</small>
@@ -52,7 +52,7 @@
               </div>
             </div>
             <div class="col-4">
-              <div class="card bg-light border-0">
+              <div class="card card-modern bg-light border-0">
                 <div class="card-body py-2">
                   <h5 class="mb-0 text-success">{{ user_obj.total_comments_made }}</h5>
                   <small class="text-muted">Comments</small>
