--- a/IESA_ROOT/users/templates/users/register.html
+++ b/IESA_ROOT/users/templates/users/register.html
@@ -42,10 +42,10 @@
                                 </label>
                             </div>
                         {% elif field.field.widget.input_type == "password" %}
-                            <div class="password-field-wrapper">
-                                {% with field_class="form-control" %}
+                            <div class="password-field-wrapper position-relative">
+                                {% with field_class="form-control pe-5" %}
                                     {% if field.errors %}
-                                        {% with field_class="form-control is-invalid" %}
+                                        {% with field_class="form-control is-invalid pe-5" %}
                                             {{ field }}
                                         {% endwith %}
                                         <div class="invalid-feedback d-block">
@@ -57,7 +57,7 @@
                                         {{ field }}
                                     {% endif %}
                                 {% endwith %}
-                                <button type="button" class="password-toggle-btn" onclick="togglePasswordVisibility(this)">
+                                <button type="button" class="password-toggle-btn" title="Toggle password visibility" aria-label="Show password">
                                     <i class="fas fa-eye"></i>
                                 </button>
                             </div>
