feat: масштабные улучшения дизайна и фейк данные
- обавлен design-fixes-v2.css с исправлениями:
  * Синяя полоска теперь  текстом заголовка
  * арточки стали компактнее (меньше padding, меньше размеры)
  * Hover эффекты отключены на мобильных (no more дергание)
  * лавные анимации только на desktop

- справлен поиск партнеров (обработка ошибок миграций)
- обавлен populate_massive_data.py для генерации тестовых данных:
  * резидент ассоциации
  * 8 членов команды
  * 12 партнеров
  * 10 пользователей
  * 8 постов блога
  * 8 событий
  * 8 социальных сетей

--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -71,6 +71,9 @@
     
     <!-- Profile Design Improvements -->
     <link rel="stylesheet" href="{% static 'css/profile-design-fix.css' %}">
+    
+    <!-- Design Fixes V2 - Underline, Cards, Mobile Hover -->
+    <link rel="stylesheet" href="{% static 'css/design-fixes-v2.css' %}">
 
 </head>
 <body>
